--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    align-content: center;
     height: 100%;
 }
 
@@ -12,15 +11,19 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    
     
 
+}
+#container-id{
+    border-radius: 10px;
 }
 
 @media (max-width: 650px) {
     .container {
        flex-direction: column;
        width: 90%;
+       margin-top: 30px;
     }
 }
 
@@ -30,7 +33,7 @@
     display: flex;
     flex-direction: column;
     color: aliceblue;
-    border-radius: 20px 0px 0px 20px;
+    
 }
 
 .teal-container{
@@ -48,7 +51,7 @@
     display: flex;
     flex-direction: column;
     color: aliceblue;
-    border-radius: 0px 20px 20px 0px;
+
 }   
 
 img{
